--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter ,system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -14,6 +14,13 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  /* Gradients */
+  --gradient-dark: linear-gradient(135deg, hsl(240 10% 3.9%), hsl(240 3.7% 15.9%));
+  --gradient-accent: linear-gradient(159deg, hsl(218, 25%, 6%), hsl(240, 22%, 15%));
+  --gradient-accent-flipped: radial-gradient(at 25% 25%, hsl(240, 20%, 10%), hsl(218, 25%, 6%));
+
+  /* Custom colors */
+  --blue-sky: #0084d1;
 }
 
 html,
@@ -21,4 +28,34 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
+}
+
+h1, h2 {
+  font-weight: 700;
+}
+
+.nav-links {
+  transition: transform .10s ease-in-out;
+}
+
+.nav-links:hover {
+  color: #00a7f5;
+}
+
+.card {
+  border:  none;
+  transition: transform .4s ease-in-out;
+}
+
+.card:hover {
+  transform: translateY(-15px);
+  box-shadow: 1px 0px 39px -25px rgba(0,0,0,0.36);
+  -webkit-box-shadow: 1px 0px 39px -25px rgba(0,0,0,0.36);
+  -moz-box-shadow: 1px 0px 39px -25px rgba(0,0,0,0.36);
 }
