--- a/src/index.css
+++ b/src/index.css
@@ -96,3 +96,9 @@ h1, h2 {
   background-color: inherit;
   transform: scale(1.01);
 }
+
+.box-general-shadow:hover {
+  -webkit-box-shadow: 0px 0px 46px -4px rgba(26, 27, 30, 1);
+  -moz-box-shadow: 0px 0px 46px -4px rgba(26, 27, 30, 1);
+  box-shadow: 0px 0px 46px -4px rgba(26, 27, 30, 1);
+}
